@@ -8,7 +8,7 @@
   <script src="../../../vendor/nwbox/nwmatcher/src/nwmatcher.js" type="text/javascript"></script>
   <script src="../../lib/assets/unittest.js" type="text/javascript"></script>
   <script type="text/javascript">
-    var undef,
+    var undef, nil = null,
      $  = Fuse.Util.$,
      $$ = Fuse.Util.$$,
      $A = Fuse.Util.$A,
