@@ -12,7 +12,7 @@
   <script src="../../../dist/fuse.js" type="text/javascript"></script>
   <script src="../../lib/assets/unittest.js" type="text/javascript"></script>
   <script type="text/javascript">
-    var undef,
+    var undef, nil = null,
      $  = Fuse.Util.$,
      $$ = Fuse.Util.$$,
      $A = Fuse.Util.$A,
